--- a/index.html
+++ b/index.html
@@ -3,71 +3,173 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Udev - Soluções inteligentes em software e tecnologia.">
-  <title>Udev | Soluções em Tecnologia</title>
+  <meta name="description" content="Udev: soluções inteligentes em software e tecnologia para crescimento de negócios.">
+  <meta name="theme-color" content="#070712">
+  <title>Udev | Tecnologia para crescimento</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700;800&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&family=Sora:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header class="site-header">
     <div class="container nav-wrap">
-      <a class="brand" href="./">Udev</a>
-      <nav class="nav-links" aria-label="Navegação principal">
+      <a class="brand" href="./"><span class="brand-mark">U</span>dev</a>
+      <nav class="nav-menu" aria-label="Navegação principal">
+        <a aria-current="page" href="./">Home</a>
         <a href="./vendapro/">VendaPro</a>
         <a href="./downloads/">Downloads</a>
         <a href="./contato/">Contato</a>
+        <a class="btn btn-outline nav-cta" href="./downloads/">Download App</a>
       </nav>
     </div>
   </header>
 
   <main>
-    <!-- Hero principal -->
-    <section class="hero container">
-      <p class="eyebrow">Startup de software</p>
-      <h1>Udev</h1>
-      <p class="hero-subtitle">Soluções inteligentes em software e tecnologia.</p>
-      <div class="hero-cta">
-        <a class="btn btn-primary" href="./vendapro/">Conhecer o VendaPro</a>
-        <a class="btn btn-secondary" href="./downloads/">Downloads</a>
-        <a class="btn btn-ghost" href="./contato/">Contato</a>
+    <section class="section">
+      <div class="container hero-grid">
+        <div data-reveal>
+          <p class="eyebrow">Startup de software</p>
+          <h1 class="hero-title">Soluções inteligentes em software e tecnologia</h1>
+          <p class="lead">A Udev entrega produtos digitais para acelerar vendas, operação e tomada de decisão com arquitetura escalável e foco em resultado.</p>
+          <div class="hero-actions">
+            <a class="btn btn-primary" href="./vendapro/">Conhecer o VendaPro</a>
+            <a class="btn btn-secondary" href="./downloads/">Downloads</a>
+            <a class="btn btn-outline" href="./contato/">Contato</a>
+          </div>
+          <div class="hero-points">
+            <span>Site institucional 100% estático e rápido</span>
+            <span>Distribuição de arquivos por links externos</span>
+            <span>Pronto para domínio próprio no GitHub Pages</span>
+          </div>
+        </div>
+
+        <article class="hero-aside panel" data-reveal>
+          <p class="eyebrow">Ecossistema Udev</p>
+          <h3>VendaPro como núcleo da operação comercial</h3>
+          <p>Implantação orientada por dados, com monitoramento contínuo e experiência pensada para equipes de alta performance.</p>
+          <div class="tag-grid">
+            <div class="tag">SaaS de vendas</div>
+            <div class="tag">Automação de processos</div>
+            <div class="tag">Métricas em tempo real</div>
+          </div>
+        </article>
       </div>
     </section>
 
-    <!-- Landing de produtos -->
-    <section class="container section">
-      <div class="section-title-row">
-        <h2>Produtos em destaque</h2>
-        <p>Ecossistema escalável para vendas, operação e crescimento digital.</p>
+    <section class="section-tight">
+      <div class="container panel title-strip" data-reveal>
+        <p class="eyebrow">Depoimentos</p>
+        <h2>O que nossos clientes relatam sobre a Udev</h2>
+        <p>Histórias reais de empresas que modernizaram operação comercial com o ecossistema Udev.</p>
+        <div class="breadcrumb">Home <span>›</span> Institucional</div>
       </div>
+    </section>
 
-      <div class="grid cards-grid">
-        <article class="card">
-          <h3>VendaPro SaaS</h3>
-          <p>Plataforma para gestão comercial, automação de processos e acompanhamento de performance em tempo real.</p>
-          <a class="text-link" href="./vendapro/">Ver detalhes</a>
+    <section class="section">
+      <div class="container">
+        <div class="testimonials-grid">
+          <article class="panel intro-panel" data-reveal>
+            <h2>Transformação digital orientada a resultado</h2>
+            <p>Unimos estratégia, engenharia de software e visão de negócio para criar plataformas que reduzem fricção operacional e ampliam receita.</p>
+            <a class="text-link" href="./contato/">Falar com a equipe Udev</a>
+          </article>
+
+          <article class="panel quote-panel" data-reveal>
+            <div class="stars">★★★★★</div>
+            <blockquote>
+              “Com o VendaPro conseguimos centralizar funil, previsão de vendas e acompanhamento do time em uma única plataforma. O ganho de produtividade foi imediato.”
+            </blockquote>
+            <div class="person">
+              <div class="avatar">JD</div>
+              <div>
+                <strong>João Duarte</strong>
+                <span>Diretor Comercial</span>
+              </div>
+            </div>
+          </article>
+        </div>
+
+        <div class="metric-grid" data-reveal>
+          <article class="metric"><strong>6.7M</strong><span>Transações monitoradas</span></article>
+          <article class="metric"><strong>12+</strong><span>Anos de experiência combinada</span></article>
+          <article class="metric"><strong>260K</strong><span>Registros operacionais/mês</span></article>
+          <article class="metric"><strong>380M</strong><span>Volume comercial analisado</span></article>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container download-band">
+        <div class="download-copy" data-reveal>
+          <p class="eyebrow">Versões oficiais</p>
+          <h2>Baixe a versão mais recente do VendaPro</h2>
+          <p>Distribuímos instaladores por links externos para manter este repositório enxuto. Escolha a versão e inicie sua operação digital.</p>
+          <div class="store-actions">
+            <a class="store-badge" data-link-key="downloadVendaproDesktop" target="_blank" rel="noopener noreferrer" href="#">Baixar para Desktop</a>
+            <a class="store-badge" data-link-key="downloadVendaproAndroid" target="_blank" rel="noopener noreferrer" href="#">Google Play</a>
+          </div>
+        </div>
+
+        <div class="device-stage" data-reveal>
+          <div class="device-orb"></div>
+          <div class="device-phone left"><div class="device-screen"></div></div>
+          <div class="device-phone right"><div class="device-screen"></div></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-compact">
+      <div class="container quick-grid" data-reveal>
+        <article class="panel quick-card">
+          <h3>Landing do VendaPro</h3>
+          <p>Conheça a proposta, funcionalidades e opções de acesso do SaaS.</p>
+          <a class="text-link" href="./vendapro/">Abrir página</a>
         </article>
-
-        <article class="card">
-          <h3>Downloads oficiais</h3>
-          <p>Central de instaladores, pacotes e materiais técnicos com distribuição por links externos.</p>
-          <a class="text-link" href="./downloads/">Acessar central</a>
+        <article class="panel quick-card">
+          <h3>Central de downloads</h3>
+          <p>Área institucional para distribuição de versões e materiais técnicos.</p>
+          <a class="text-link" href="./downloads/">Abrir página</a>
         </article>
-
-        <article class="card">
-          <h3>Suporte comercial</h3>
-          <p>Contato direto para implantação, parceria e atendimento institucional da Udev.</p>
-          <a class="text-link" href="./contato/">Falar com a Udev</a>
+        <article class="panel quick-card">
+          <h3>Contato e parcerias</h3>
+          <p>Canal direto com a Udev para implantação, comercial e suporte institucional.</p>
+          <a class="text-link" href="./contato/">Abrir página</a>
         </article>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container footer-wrap">
-      <p>© <span class="js-year"></span> Udev. Todos os direitos reservados.</p>
-      <p class="muted">Tecnologia aplicada a resultados.</p>
+    <div class="container footer-grid">
+      <section class="footer-col">
+        <a class="brand" href="./"><span class="brand-mark">U</span>dev</a>
+        <p>Startup focada em produtos digitais, automação e soluções SaaS para empresas em crescimento.</p>
+      </section>
+
+      <section class="footer-col">
+        <h3>Newsletter Udev</h3>
+        <p>Receba novidades de produto e atualizações institucionais.</p>
+        <form class="newsletter-form js-newsletter-form">
+          <input class="js-newsletter-email" type="email" placeholder="Seu melhor e-mail" required>
+          <button class="btn btn-primary btn-block" type="submit">Inscrever</button>
+        </form>
+        <p class="small muted">Sem backend: a inscrição é encaminhada por e-mail.</p>
+      </section>
+
+      <section class="footer-col">
+        <h3>Contato</h3>
+        <div class="footer-links">
+          <a data-link-key="whatsapp" target="_blank" rel="noopener noreferrer" href="#">WhatsApp Comercial</a>
+          <a data-link-key="email" href="mailto:contato@udev.dev.br">contato@udev.dev.br</a>
+          <a href="./downloads/">Downloads Oficiais</a>
+        </div>
+      </section>
+    </div>
+
+    <div class="container footer-bottom">
+      <span>© <span class="js-year"></span> Udev. Todos os direitos reservados.</span>
+      <span>Tecnologia aplicada a crescimento previsível.</span>
     </div>
   </footer>
 
