--- a/vendapro/index.html
+++ b/vendapro/index.html
@@ -3,54 +3,111 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Conheça o SaaS VendaPro da Udev.">
+  <meta name="description" content="VendaPro: SaaS de gestão comercial da Udev.">
+  <meta name="theme-color" content="#070712">
   <title>VendaPro | Udev</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700;800&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&family=Sora:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
   <header class="site-header">
     <div class="container nav-wrap">
-      <a class="brand" href="../">Udev</a>
-      <nav class="nav-links" aria-label="Navegação principal">
+      <a class="brand" href="../"><span class="brand-mark">U</span>dev</a>
+      <nav class="nav-menu" aria-label="Navegação principal">
+        <a href="../">Home</a>
         <a aria-current="page" href="../vendapro/">VendaPro</a>
         <a href="../downloads/">Downloads</a>
         <a href="../contato/">Contato</a>
+        <a class="btn btn-outline nav-cta" href="../downloads/">Download App</a>
       </nav>
     </div>
   </header>
 
-  <main class="container section page-content">
-    <p class="eyebrow">SaaS Udev</p>
-    <h1>VendaPro</h1>
-    <p>
-      O VendaPro é a solução SaaS da Udev para empresas que precisam organizar a operação comercial,
-      aumentar previsibilidade de receita e acelerar fechamento de negócios.
-    </p>
-
-    <section class="card soft-card">
-      <h2>Funcionalidades</h2>
-      <ul class="feature-list">
-        <li>Pipeline de vendas com visão por etapa e prioridade</li>
-        <li>Cadastro e gestão centralizada de clientes e oportunidades</li>
-        <li>Indicadores de performance em painel executivo</li>
-        <li>Automação de tarefas e follow-up comercial</li>
-        <li>Relatórios para tomada de decisão orientada por dados</li>
-      </ul>
+  <main>
+    <section class="inner-hero">
+      <div class="container" data-reveal>
+        <p class="eyebrow">Produto SaaS</p>
+        <h1>VendaPro</h1>
+        <p>Plataforma para gestão comercial, automação de rotinas e análise de performance em tempo real para times de vendas.</p>
+        <div class="breadcrumb">Home <span>›</span> VendaPro</div>
+      </div>
     </section>
 
-    <div class="hero-cta">
-      <a class="btn btn-primary" data-link-key="vendaproDownload" target="_blank" rel="noopener noreferrer" href="#">Baixar VendaPro</a>
-      <a class="btn btn-secondary" data-link-key="vendaproOnline" target="_blank" rel="noopener noreferrer" href="#">Acessar versão online</a>
-    </div>
+    <section class="section-tight section">
+      <div class="container content-wrap">
+        <article class="panel" data-reveal>
+          <h2>Desempenho comercial com governança</h2>
+          <p class="lead">O VendaPro estrutura o ciclo de vendas da prospecção ao pós-venda, reduzindo perda de contexto e acelerando decisões estratégicas.</p>
+          <div class="info-pill">Escalável para equipes em expansão</div>
+          <div class="hero-actions">
+            <a class="btn btn-primary" data-link-key="vendaproDownload" target="_blank" rel="noopener noreferrer" href="#">Baixar VendaPro</a>
+            <a class="btn btn-secondary" data-link-key="vendaproOnline" target="_blank" rel="noopener noreferrer" href="#">Acessar versão online</a>
+          </div>
+        </article>
+
+        <article class="panel" data-reveal>
+          <h3>Funcionalidades</h3>
+          <ul class="feature-list">
+            <li>Pipeline de oportunidades com etapas personalizáveis</li>
+            <li>Gestão centralizada de clientes, leads e follow-up</li>
+            <li>Painéis executivos com indicadores em tempo real</li>
+            <li>Automação de tarefas recorrentes e alertas críticos</li>
+            <li>Relatórios para previsibilidade comercial e auditoria</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+    <section class="section-compact">
+      <div class="container quick-grid" data-reveal>
+        <article class="panel quick-card">
+          <h3>Operação unificada</h3>
+          <p>Equipe comercial e gestão executiva em uma única visão de dados.</p>
+        </article>
+        <article class="panel quick-card">
+          <h3>Ritmo de execução</h3>
+          <p>Rotinas automatizadas para reduzir tarefas manuais do time.</p>
+        </article>
+        <article class="panel quick-card">
+          <h3>Decisão orientada por dados</h3>
+          <p>Indicadores confiáveis para priorizar ações com impacto real.</p>
+        </article>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container footer-wrap">
-      <p>© <span class="js-year"></span> Udev. Todos os direitos reservados.</p>
-      <p class="muted">Tecnologia aplicada a resultados.</p>
+    <div class="container footer-grid">
+      <section class="footer-col">
+        <a class="brand" href="../"><span class="brand-mark">U</span>dev</a>
+        <p>Startup focada em produtos digitais, automação e soluções SaaS para empresas em crescimento.</p>
+      </section>
+
+      <section class="footer-col">
+        <h3>Newsletter Udev</h3>
+        <p>Receba novidades de produto e atualizações institucionais.</p>
+        <form class="newsletter-form js-newsletter-form">
+          <input class="js-newsletter-email" type="email" placeholder="Seu melhor e-mail" required>
+          <button class="btn btn-primary btn-block" type="submit">Inscrever</button>
+        </form>
+        <p class="small muted">Sem backend: a inscrição é encaminhada por e-mail.</p>
+      </section>
+
+      <section class="footer-col">
+        <h3>Contato</h3>
+        <div class="footer-links">
+          <a data-link-key="whatsapp" target="_blank" rel="noopener noreferrer" href="#">WhatsApp Comercial</a>
+          <a data-link-key="email" href="mailto:contato@udev.dev.br">contato@udev.dev.br</a>
+          <a href="../downloads/">Downloads Oficiais</a>
+        </div>
+      </section>
+    </div>
+
+    <div class="container footer-bottom">
+      <span>© <span class="js-year"></span> Udev. Todos os direitos reservados.</span>
+      <span>Tecnologia aplicada a crescimento previsível.</span>
     </div>
   </footer>
 
